# Poolver

./: .gitignore  Anchor.toml  Cargo.toml  QUESTIONS.md  README.md  package.json
app/: .env.local.example  package.json  vercel.json
app/src/app/: globals.css  page.tsx
app/src/app/api/faucet/: route.ts
app/src/app/api/kyc/issue/: route.ts
app/src/app/create/: page.tsx
app/src/app/docs/: page.tsx
app/src/app/pool/[address]/: page.tsx
app/src/app/pools/: page.tsx
app/src/components/layout/: AppShell.tsx  Footer.tsx  TopBar.tsx
app/src/components/lottery/: BidPanel.tsx  LotterySection.tsx
app/src/components/onboarding/: OnboardingGate.tsx
app/src/components/pools/: DefiKaminoStats.tsx  MonthTimeline.tsx  ParticipantRoster.tsx  PoolActions.tsx  PoolCard.tsx  ReserveStats.tsx
app/src/components/wallet/: FaucetButton.tsx  ReputationBadge.tsx  UsdcBalance.tsx
app/src/hooks/: useOnboarding.ts  usePool.ts  usePools.ts
app/src/lib/: admin-client.ts  bid-storage.ts  constants.ts  format.ts  rate-limit.ts  tx-helpers.ts  types.ts  wallet-bridge.ts
app/src/providers/: PoolverProvider.tsx
archive/poolver-legacy/: Cargo.toml
archive/poolver-legacy/src/: constants.rs  error.rs  events.rs  instructions.rs  lib.rs  state.rs  switchboard.rs
archive/poolver-legacy/src/instructions/: activate_group.rs  close_collection.rs  close_group.rs  commit_round.rs  create_group.rs  distribute.rs  distribute_insurance.rs  join_group.rs  leave_group.rs  make_payment.rs  mark_default.rs  resolve_round.rs  return_collateral.rs  skip_round.rs  start_round.rs
archive/poolver-legacy/src/state/: group.rs  member.rs  reputation.rs  round.rs
archive/poolver-legacy/tests/: test_completion.rs  test_group.rs  test_rounds.rs
archive/poolver-legacy/tests/common/: mod.rs
client/: README.md  package.json  tsconfig.json
client/src/: constants.ts  index.ts  pdas.ts  poolver.ts  types.ts
client/src/idls/: poolver_core.json  poolver_core.ts  poolver_reserve.json  poolver_reserve.ts  poolver_yield_defi.json  poolver_yield_defi.ts  poolver_yield_vault.json  poolver_yield_vault.ts
client/src/instructions/: _accounts.ts  admin_skip_phase.ts  advance_month.ts  claim_winning.ts  commit_bid.ts  contribute.ts  create_pool.ts  distribute_yield.ts  initialize_protocol.ts  initialize_user_reputation.ts  join_pool.ts  liquidate_default.ts  mark_late_payment.ts  mock_issue_kyc.ts  refund_collateral.ts  reveal_bid.ts  select_winner.ts  slash_unpaid.ts  suspend_participant.ts
client/src/queries/: kyc.ts  participant.ts  pool.ts  reputation.ts  reserve.ts
client/src/utils/: bid_hash.ts  constants.ts  reputation_tier.ts
docs/: BACKLOG.md  FRONTEND_HANDOFF_V1.md  PITCH_DECK_PROMPT.md  PITCH_DECK_REVIEW_NOTES.md  PITCH_FEEDBACK.md  PITCH_FEEDBACK_V2.md  SPEC_V1.md  architecture.md  invariants.md  mock-to-production.md
programs/poolver-core/: Cargo.toml
programs/poolver-core/src/: constants.rs  error.rs  events.rs  kyc.rs  lib.rs  state.rs
programs/poolver-core/src/adapter_cpi/: adapter.rs  mod.rs
programs/poolver-core/src/instructions/: admin_close_protocol.rs  admin_skip_phase.rs  advance_month.rs  claim_winning.rs  commit_bid.rs  contribute.rs  create_pool.rs  distribute_yield.rs  initialize_protocol.rs  initialize_user_reputation.rs  join_pool.rs  liquidate_default.rs  mark_late_payment.rs  mock_issue_kyc.rs  mod.rs  refund_collateral.rs  reveal_bid.rs  select_winner.rs  slash_unpaid.rs  suspend_participant.rs
programs/poolver-core/tests/: test_core.rs  test_core_step10.rs  test_core_step5.rs  test_core_step6.rs  test_core_step7.rs  test_core_step8.rs  test_core_step9.rs  test_integration.rs
programs/poolver-core/tests/common/: mod.rs
programs/poolver-reserve/: Cargo.toml
programs/poolver-reserve/src/: constants.rs  core_id.rs  error.rs  events.rs  lib.rs  state.rs
programs/poolver-reserve/src/instructions/: admin_close_reserve.rs  deposit.rs  draw.rs  initialize_reserve.rs  mod.rs  seed.rs
programs/poolver-reserve/tests/: test_reserve.rs
programs/poolver-reserve/tests/common/: mod.rs
programs/poolver-reserve/tests/fake_core/: Cargo.toml
programs/poolver-reserve/tests/fake_core/src/: lib.rs
programs/poolver-yield-defi/: Cargo.toml
programs/poolver-yield-defi/src/: constants.rs  core_id.rs  error.rs  events.rs  lib.rs  state.rs
programs/poolver-yield-defi/src/instructions/: deposit.rs  emergency_unwind.rs  harvest.rs  initialize_adapter.rs  mock_helpers.rs  mod.rs  reset_circuit_breaker.rs  withdraw.rs
programs/poolver-yield-defi/tests/: test_adapter.rs
programs/poolver-yield-defi/tests/common/: mod.rs
programs/poolver-yield-defi/tests/fake_core/: Cargo.toml
programs/poolver-yield-defi/tests/fake_core/src/: lib.rs
programs/poolver-yield-vault/: Cargo.toml
programs/poolver-yield-vault/src/: constants.rs  core_id.rs  error.rs  events.rs  lib.rs  state.rs
programs/poolver-yield-vault/src/instructions/: deposit.rs  emergency_unwind.rs  harvest.rs  initialize_adapter.rs  mod.rs  withdraw.rs
programs/poolver-yield-vault/tests/: test_adapter.rs
programs/poolver-yield-vault/tests/common/: mod.rs
programs/poolver-yield-vault/tests/fake_core/: Cargo.toml
programs/poolver-yield-vault/tests/fake_core/src/: lib.rs
scripts/: README.md  admin-close-and-reinit.ts  check-fees.ts  claim-winner.ts  continue-pool.ts  contribute-all.ts  deck-stats.ts  deploy.ts  diagnose-pool.ts  faucet.ts  gen-icon.cjs  initialize.ts  list-pools.ts  seed-pool.ts  seed-reserve.ts  setup-alt.ts  simulate-pool.ts  topup-adapter.ts
