[package]
name = "poolver"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "poolver"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "1.0.0"
anchor-spl = { version = "1.0.0", features = ["token_2022", "associated_token"] }
bytemuck = { version = "1.14", features = ["derive"] }

[dev-dependencies]
litesvm = "0.10.0"
solana-account = "3.4"
solana-clock = "3.0"
solana-keypair = "3.0.1"
solana-message = "3.0.1"
solana-program-option = "3.1"
solana-program-pack = "3.1"
solana-pubkey = "3.0"
solana-signer = "3.0.0"
solana-transaction = "3.0.2"
spl-token-interface = "2.0"
solana-instruction = "3.4"
spl-associated-token-account-interface = "2.0"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
