[package]
name = "poolver-yield-defi"
version = "0.1.0"
description = "Poolver V1 Tier 1 yield adapter (Kamino mock — SPEC_QUESTION-19/20)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "poolver_yield_defi"

[features]
# Default V1 build: `mock-yield` ships the `mock_inject_yield` /
# `mock_set_*` helpers so tests + the hackathon demo can simulate Kamino
# interest accruing without a live Kamino devnet integration
# (SPEC_QUESTION-19 / Q-20). A mainnet build (`--no-default-features`)
# drops the mock helpers from dispatch + IDL, identical pattern to
# `poolver-core`'s `mock-kyc` flag (arch §10, INV-26).
default = ["mock-yield"]
mock-yield = []
no-entrypoint = []
cpi = ["no-entrypoint"]
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "1.0.0"
anchor-spl = { version = "1.0.0", features = ["token_2022", "associated_token"] }

[dev-dependencies]
# Mirror peer-program test surfaces (poolver-yield-vault) so the harness
# code stays portable across V1 programs.
litesvm = "0.10.0"
solana-account = "3.4"
solana-clock = "3.0"
solana-keypair = "3.0.1"
solana-message = "3.0.1"
solana-program-option = "3.1"
solana-program-pack = "3.1"
solana-pubkey = "3.0"
solana-signer = "3.0.0"
solana-transaction = "3.0.2"
spl-token-interface = "2.0"
solana-instruction = "3.4"
spl-associated-token-account-interface = "2.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
